[gd_scene load_steps=2 format=3 uid="uid://b2c4o62tb0t3q"]

[ext_resource type="Script" uid="uid://bxxv4b0nibxix" path="res://Menu/endgame_screen.gd" id="1_bco23"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bco23")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimeLbl" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 320.0
offset_bottom = -568.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "You held out for {seconds} seconds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLbl" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 512.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "You earned {credits} credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nameEdit" type="TextEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 448.0
offset_top = 768.0
offset_right = -448.0
offset_bottom = -248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter your name to get on the amazing highscore of eternal glory"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 832.0
offset_top = 896.0
offset_right = -832.0
offset_bottom = -120.0
disabled = true
text = "Submit"

[node name="StatusLbl" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 832.0
offset_top = 976.0
offset_right = -832.0
offset_bottom = -56.0
text = "Status"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="Panel/nameEdit" to="." method="name_changed"]
[connection signal="pressed" from="Panel/Button" to="." method="onSubmit"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
